BankApp-CD/Manifest/manifest.yaml
# =========================
# MySQL Deployment
# =========================
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mysql
  namespace: webapps

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:
        - name: mysql

          image: mysql:8

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc

---
# =========================
# MySQL Service
# =========================
apiVersion: v1
kind: Service

metadata:
  name: mysql-service
  namespace: webapps

spec:
  selector:
    app: mysql

  ports:
    - port: 3306
      targetPort: 3306

  type: ClusterIP

---
# =========================
# BankApp Deployment
# =========================
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bankapp
  namespace: webapps

spec:
  replicas: 1

  selector:
    matchLabels:
      app: bankapp

  template:
    metadata:
      labels:
        app: bankapp

    spec:
      containers:
        - name: bankapp

          image: shauyeb009/bankapp:v25

          ports:
            - containerPort: 8083
---
# =========================
# BankApp Service
# =========================
apiVersion: v1
kind: Service

metadata:
  name: bankapp-service
  namespace: webapps

spec:
  selector:
    app: bankapp

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP

---
# =========================
# Ingress
# =========================
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: bankapp-ingress
  namespace: webapps

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: bankapp-service

                port:
                  number: 80
